custom_cdk_react_game/application/react_resources/react_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: react
  labels:
    app: react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: nginx:1.14.2
        ports:
        - containerPort: 8080
