custom_cdk_react_game/application/react_resources/react_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: react
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: react
