custom_cdk_react_game/application/react_resources/react_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react
  namespace: react
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: react
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react
                port:
                  number: 80
